--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Cache Saved</p>
                 </div>
                 <div class="flex flex-col items-center">
-                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"> <span id="countto3" countto="2600" data-deci="1">2.8</span>k+</h3>
+                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"> <span id="countto3" countto="2800" data-decimal="1">2.8</span>k+</h3>
                     <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Global Partners</p>
                 </div>
                 <div class="flex flex-col items-center">
@@ -254,6 +254,25 @@
                     <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Happy Developers</p>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!---Getting started Section ---->
+
+    <div class="w-full">
+        <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+            <div class="grid w-full grid-cols-1 gap-32 lg:grid-cols-2">
+                <div class="bg-cover bg-center hidden lg:block rounded-3xl" style="background-image: url(&quot;https://i.ibb.co/b1kwzHk/2.png&quot;);">
+                </div>
+            <div class="flex flex-col gap-16">
+                <div class="flex flex-col gap-2 text-center md:text-start">
+                    <h2 class="text-3xl font-extrabold md:text-4xl lg:text-5xl text-dark-grey-900">How Cache Works?</h2>
+                    <p class="text-base font-medium leading-7  text-dark-grey-600"><span style="color: rgb(55, 65, 81); font-family: sohne, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></span>Cache Bank simplifies sign-up with a user-friendly website. streamlined account options, and an efficient verification process, making banking accessible and hassle-free for developers.</p>
+                </div>
+
+            </div>
+            </div>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
