--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </defs>
             </svg>
     </button>
-    <div class="absolute flex md:hideen flex-col items-start shadow-main justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full px-4 py-4"
+    <div class="absolute flex md:hidden flex-col items-start shadow-main justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full px-4 py-4"
     id="mobile-menu"
     >
         <a href="#" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">Products</a>
